--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <title>Mazzaropi | Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="left-navegation">
@@ -30,5 +32,17 @@
             </ul>
         </div>
     </header>
+    <main>
+        <section>
+            <article id="container">
+                <img src="img/banner.png" alt="Banner principal">
+                <div id="subs">
+                    <p>O Programa de Relacionamento do <br />Grupo Hortifruti Mazzaropi</p>
+                    <span id="btn-saiba">Saiba Mais</span>
+                </div>
+            </article>
+        </section>
+    </main>
 </body>
+
 </html>
