--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
                 </div>
             </article>
         </section>
+        <section>
+            <nav>
+                <ul class="categorias">
+                    <li><a href=""><img src="img/verduras.svg" /></a></li>
+                    <li><a href=""><img src="img/fruta.svg" /></a></li>
+                    <li><a href=""><img src="img/legumes.svg" /></a></li>
+                    <li><a href=""><img src="img/graos.svg" /></a></li>
+                    <li><a href=""><img src="img/sementes.svg" /></a></li>
+                    <li><a href=""><img src="img/plantas.svg" /></a></li>
+                    <li><a href=""><img src="img/percaria.svg" /></a></li>
+                    <li><a href=""><img src="img/acougue.svg" /></a></li>
+                    <li><a href=""><img src="img/frios.svg" /></a></li>
+                </ul>
+            </nav>
+        </section>
     </main>
 </body>
 
