--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </article>
         </section>
         <section>
-            <nav>
-                <ul class="categorias">
+            <nav class="categorias">
+                <ul>
                     <li><a href=""><img src="img/verduras.svg" /></a></li>
                     <li><a href=""><img src="img/fruta.svg" /></a></li>
                     <li><a href=""><img src="img/legumes.svg" /></a></li>
