--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
         <section>
             <article id="container">
-                <img src="img/banner.png" alt="Banner principal">
+                <img class="imgBanner" src="img/banner.png" alt="Banner principal">
                 <div id="subs">
                     <p>O Programa de Relacionamento do <br />Grupo Hortifruti Mazzaropi</p>
                     <span id="btn-saiba">Saiba Mais</span>
@@ -57,6 +57,14 @@
                 </ul>
             </nav>
         </section>
+        <div class="wrapper">
+            <div class="search">
+                <input type="text" class="procurar" placeholder="O que você vai querer hoje?">
+                <button type="submit">
+                    <img src="img/icone-procurar.svg" alt="icone procurar">
+                </button>
+            </div>
+        </div>
     </main>
 </body>
 
