--- a/index.html
+++ b/index.html
@@ -59,12 +59,37 @@
         </section>
         <div class="wrapper">
             <div class="search">
-                <input type="text" class="procurar" placeholder="O que você vai querer hoje?">
                 <button type="submit">
-                    <img src="img/icone-procurar.svg" alt="icone procurar">
+                    <img src="img/Lupa.svg" alt="icone procurar" />
                 </button>
+                <input type="text" class="procurar" placeholder="O que você vai querer hoje?" />
+            </div>
+            <div>
+                <img src="img/btn-categorias.svg" class="olhar" />
             </div>
         </div>
+        
+
+        <section class="produtos">
+            <div>
+                <img src="img/banana.jpg" width="168px">
+                <h3>Banana</h3>
+                <p>R$20,00</p>
+            </div>
+            <div>
+                <img src="img/maca.jpg" width="168px">
+                <h3>Banana</h3>
+                <p>R$20,00</p>
+            </div>
+            <div>
+                <img src="img/coco.jpg" width="168px">
+                <h3>Banana</h3>
+                <p>R$20,00</p>
+            </div>
+
+
+
+        </section>
     </main>
 </body>
 
