--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     </header>
     <main>
         <section>
-            <article id="container">
-                <img class="imgBanner" src="img/banner.png" alt="Banner principal">
+            <div id="container">
+                <img src="img/banner.png" alt="Banner principal">
                 <div id="subs">
                     <p>O Programa de Relacionamento do <br />Grupo Hortifruti Mazzaropi</p>
                     <span id="btn-saiba">Saiba Mais</span>
                 </div>
-            </article>
+            </div>
         </section>
         <section>
             <nav class="categorias">
@@ -68,7 +68,7 @@
                 <img src="img/btn-categorias.svg" class="olhar" />
             </div>
         </div>
-        
+
 
         <section class="produtos">
             <div>
