--- a/index.html
+++ b/index.html
@@ -64,11 +64,15 @@
                 </button>
                 <input type="text" class="procurar" placeholder="O que você vai querer hoje?" />
             </div>
+            <a href="#"><img src="img/btn-categorias.svg" class="filter" /></a>
+        </div>
+        <div id="banner-oferta">
+            <img src="img/banner-oferta.svg" alt="Banner de ofertas">
             <div>
-                <img src="img/btn-categorias.svg" class="olhar" />
+                <p>Oferta Especial<br />Para Você</p>
+                <span>Compre Agora</span>
             </div>
         </div>
-
 
         <section class="produtos">
             <div>
@@ -76,7 +80,7 @@
                 <h3>Banana</h3>
                 <p>R$20,00</p>
             </div>
-            <div>
+            <div id="banner-text">
                 <img src="img/maca.jpg" width="168px">
                 <h3>Banana</h3>
                 <p>R$20,00</p>
