teste de responsividade

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         </div>
         <div id="banner-oferta">
             <img src="img/banner-oferta.svg" alt="Banner de ofertas">
-            <div>
+            <div id="banner-text">
                 <p>Oferta Especial<br />Para Você</p>
-                <span>Compre Agora</span>
+                <a href="#">Compre Agora</a>
             </div>
         </div>
 
