--- a/index.html
+++ b/index.html
@@ -189,6 +189,42 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div>
+            <figure>
+                <img src="img/Logo pessoas.svg" alt="Hortifrut Mazzaropi">
+                <div id="bar"></div>
+                <h1>Hortifrut <br /> Mazzaropi</h1>
+            </figure>
+            <p>Da horta pra sua casa</p>
+        </div>
+        
+        <div>
+            <h3>Sobre a Hortifrut Mazzaropi</h3>
+            <p><img src="img/mundo.svg" alt="icone história">Nossa hitória</p>
+            <p><img src="img/pin-localizacao.svg" alt="pin localização">Nossos endereços</p>
+        </div>
+        <div>
+            <h3>Central de ajuda</h3>
+            <p><img src="img/pin-privacidade.svg" alt="pin privacidade">Política de privacidade</p>
+            <p><img src="img/duvidas-pin.svg">Dúvidas Frequentes</p>
+            <p><img src="img/pin-privacidade.svg" alt="pin termos">Termos de uso</p>     
+        </div>
+        <div>
+            <h3>Formas de pagamento</h3>
+            <img src="img/formas-de-pagamento.png" alt="cartões aceitos">
+        </div>
+        <div>
+            <h3>Social</h3>
+            <figure>
+                <img src="img/facebook-icon.svg" alt="ícone do facebook">
+                <img src="img/youtube-icon.svg" alt="ícone do youtube">
+                <img src="img/instagram-icon.svg" alt="ícone do instagram">
+                <img src="img/twiter-icon.svg" alt="ícone do twitter">
+            </figure>
+        </div>
+
+    </footer>
 </body>
 
 </html>
