--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
                     <li><a href="#"><img src="img/frios.svg" /></a></li>
                 </ul>
             </nav>
+            <nav id="nomes">
+                <ul>
+                    <li>VERDURAS</li>
+                    <li>FRUTAS</li>
+                    <li>LEGUMES</li>
+                    <li>GRÃOS</li>
+                    <li>SEMENTES</li>
+                    <li>PLANTAS</li>
+                    <li>PESCARIA</li>
+                    <li>AÇOUGUE</li>
+                    <li>FRIOS</li>
+                </ul>
+
+            </nav>
         </section>
         <div class="wrapper">
             <div class="search">
@@ -88,7 +102,7 @@
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/maca.jpg" width="160px" alt="imagem de maçã">
+                    <img src="img/maca.jpg" width="168px" alt="imagem de maçã">
                     <h3>Maçã</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
@@ -122,19 +136,19 @@
             
             <div class="secao">
                 <figure>
-                    <img src="img/mandioca.jpg" width="200px" alt="imagem de mandioca">
+                    <img src="img/mandioca.jpg" width="168px" alt="imagem de mandioca">
                     <h3>Mandioca</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/cebola.jpg" width="160px" alt="imagem de cebola">
+                    <img src="img/cebola.jpg" width="168px" alt="imagem de cebola">
                     <h3>Cebola</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/pimenta.jpg" width="160px" alt="imagem de pimenta">
+                    <img src="img/pimenta.jpg" width="168px" alt="imagem de pimenta">
                     <h3>Pimenta</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
@@ -146,31 +160,33 @@
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/tomate.jpg" width="130px" alt="imagem de tomate">
+                    <img src="img/tomate.jpg" width="168px" alt="imagem de tomate">
                     <h3>Tomate</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
             </div>
+        </section>    
+        <section class="produtos">    
             <div class="titulo">
                 <h2>Seção de verduras</h2>
                 <a href="#">Ver mais <img src="img/seta-para-baixo.svg" alt="seta para abrir mais opções"></a>
-            </div>    
+            </div>      
             <div class="secao">
                 <figure>
-                    <img src="img/repolho.jpg" width="160px" alt="imagem de repolho">
+                    <img src="img/repolho.jpg" width="168px" alt="imagem de repolho">
                     <h3>Repolho</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/alface.jpg" width="160px" alt="imagem de alface">
+                    <img src="img/alface.jpg" width="168px" alt="imagem de alface">
                     <h3>Alface</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/coentro.jpg" width="160px" alt="imagem de coentro">
+                    <img src="img/coentro.jpg" width="168px" alt="imagem de coentro">
                     <h3>Coentro</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
