--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
             </div>
         </section>
     </main>
+
+    <div id="line"></div>
+
     <footer>
         <div>
             <figure>
@@ -202,22 +205,22 @@
             <p>Da horta pra sua casa</p>
         </div>
 
-        <div>
+        <div class="footer-nav" id="sobre">
             <h3>Sobre a Hortifrut Mazzaropi</h3>
             <p><img src="img/mundo.svg" alt="icone história">Nossa hitória</p>
             <p><img src="img/pin-localizacao.svg" alt="pin localização">Nossos endereços</p>
         </div>
-        <div>
+        <div class="footer-nav" id="central">
             <h3>Central de ajuda</h3>
             <p><img src="img/pin-privacidade.svg" alt="pin privacidade">Política de privacidade</p>
             <p><img src="img/duvidas-pin.svg">Dúvidas Frequentes</p>
             <p><img src="img/pin-privacidade.svg" alt="pin termos">Termos de uso</p>
         </div>
-        <div>
+        <div class="footer-nav" id="formas-pag">
             <h3>Formas de pagamento</h3>
             <img src="img/formas-de-pagamento.png" alt="cartões aceitos">
         </div>
-        <div>
+        <div class="footer-nav" id="social">
             <h3>Social</h3>
             <figure>
                 <img src="img/facebook-icon.svg" alt="ícone do facebook">
