teste de responsividade nos produtos

--- a/index.html
+++ b/index.html
@@ -82,31 +82,31 @@
 
             <div class="secao">
                 <figure>
-                    <img src="img/banana.jpg" width="168px" alt="imagem de banana">
+                    <img src="img/banana.jpg"  alt="imagem de banana">
                     <h3>Banana</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/maca.jpg" width="168px" alt="imagem de maçã">
+                    <img src="img/maca.jpg"  alt="imagem de maçã">
                     <h3>Maçã</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/coco.jpg" width="168px" alt="imagem de coco">
+                    <img src="img/coco.jpg"  alt="imagem de coco">
                     <h3>Coco</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/morango.jpg" width="168px" alt="imagem de morango">
+                    <img src="img/morango.jpg"  alt="imagem de morango">
                     <h3>Morango</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/uva.jpg" width="168px" alt="imagem de uva">
+                    <img src="img/uva.jpg"  alt="imagem de uva">
                     <h3>Uva</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
@@ -122,31 +122,31 @@
 
             <div class="secao">
                 <figure>
-                    <img src="img/mandioca.jpg" width="168px" alt="imagem de mandioca">
+                    <img src="img/mandioca.jpg"  alt="imagem de mandioca">
                     <h3>Mandioca</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/cebola.jpg" width="168px" alt="imagem de cebola">
+                    <img src="img/cebola.jpg"  alt="imagem de cebola">
                     <h3>Cebola</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/pimenta.jpg" width="168px" alt="imagem de pimenta">
+                    <img src="img/pimenta.jpg"  alt="imagem de pimenta">
                     <h3>Pimenta</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/pimentao.jpg" width="168px" alt="imagem de pimentão">
+                    <img src="img/pimentao.jpg"  alt="imagem de pimentão">
                     <h3>Pimentão</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/tomate.jpg" width="168px" alt="imagem de tomate">
+                    <img src="img/tomate.jpg"  alt="imagem de tomate">
                     <h3>Tomate</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
@@ -160,31 +160,31 @@
             </div>
             <div class="secao">
                 <figure>
-                    <img src="img/repolho.jpg" width="168px" alt="imagem de repolho">
+                    <img src="img/repolho.jpg"  alt="imagem de repolho">
                     <h3>Repolho</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/alface.jpg" width="168px" alt="imagem de alface">
+                    <img src="img/alface.jpg"  alt="imagem de alface">
                     <h3>Alface</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/coentro.jpg" width="168px" alt="imagem de coentro">
+                    <img src="img/coentro.jpg"  alt="imagem de coentro">
                     <h3>Coentro</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/couve.jpg" width="168px" alt="imagem de couve">
+                    <img src="img/couve.jpg"  alt="imagem de couve">
                     <h3>Couve</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/brocolis.jpg" width="168px" alt="imagem de brócolis">
+                    <img src="img/brocolis.jpg"  alt="imagem de brócolis">
                     <h3>Brócolis</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
