--- a/index.html
+++ b/index.html
@@ -65,6 +65,43 @@
                 <input type="text" class="procurar" placeholder="O que você vai querer hoje?" />
             </div>
             <a href="#"><img src="img/btn-categorias.svg" class="filter" /></a>
+            
+            <script src="script.js"></script>
+
+            <div id="modal-promocao" class="modal-container">
+                <div class="modal">
+                    <div class="center">
+                        <h3>Encontre seu <br /> Produto Preferido</h3>
+                        <div class="search2">
+                            <button type="submit">
+                                <img src="img/Lupa.svg" alt="icone procurar" width="20px" />
+                            </button>
+                            <input type="text" class="procurar2" placeholder="O que você vai querer hoje?" />
+                        </div>
+                        <h4>Produtor</h4>
+                        <ul class="ul ul1">
+                            <li>Raimunda</li>
+                            <li>Seu Zé</li>
+                            <li>Fazenda Paz</li>
+                        </ul>
+                        <h4>Localização</h4>
+                        <ul class="ul ul2">
+                            <li>1 Km</li>
+                            <li>2 Km</li>
+                            <li>&gt10km</li>
+                            <li>&lt;10km</li>
+                        </ul>
+                        <h4>categoria</h4>
+                        <ul class="ul ul3">
+                            <li>Grãos</li>
+                            <li>Verduras</li>
+                            <li>Frutas</li>
+                            <li>Sementes</li>
+                        </ul>
+                        <button class="button">Procurar</button>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="banner-oferta">
             <img src="img/banner-oferta.svg" alt="Banner de ofertas">
@@ -82,31 +119,31 @@
 
             <div class="secao">
                 <figure>
-                    <img src="img/banana.jpg"  alt="imagem de banana">
+                    <img src="img/banana.jpg" alt="imagem de banana">
                     <h3>Banana</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/maca.jpg"  alt="imagem de maçã">
+                    <img src="img/maca.jpg" alt="imagem de maçã">
                     <h3>Maçã</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/coco.jpg"  alt="imagem de coco">
+                    <img src="img/coco.jpg" alt="imagem de coco">
                     <h3>Coco</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/morango.jpg"  alt="imagem de morango">
+                    <img src="img/morango.jpg" alt="imagem de morango">
                     <h3>Morango</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/uva.jpg"  alt="imagem de uva">
+                    <img src="img/uva.jpg" alt="imagem de uva">
                     <h3>Uva</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
@@ -122,31 +159,31 @@
 
             <div class="secao">
                 <figure>
-                    <img src="img/mandioca.jpg"  alt="imagem de mandioca">
+                    <img src="img/mandioca.jpg" alt="imagem de mandioca">
                     <h3>Mandioca</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/cebola.jpg"  alt="imagem de cebola">
+                    <img src="img/cebola.jpg" alt="imagem de cebola">
                     <h3>Cebola</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/pimenta.jpg"  alt="imagem de pimenta">
+                    <img src="img/pimenta.jpg" alt="imagem de pimenta">
                     <h3>Pimenta</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/pimentao.jpg"  alt="imagem de pimentão">
+                    <img src="img/pimentao.jpg" alt="imagem de pimentão">
                     <h3>Pimentão</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/tomate.jpg"  alt="imagem de tomate">
+                    <img src="img/tomate.jpg" alt="imagem de tomate">
                     <h3>Tomate</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
@@ -160,31 +197,31 @@
             </div>
             <div class="secao">
                 <figure>
-                    <img src="img/repolho.jpg"  alt="imagem de repolho">
+                    <img src="img/repolho.jpg" alt="imagem de repolho">
                     <h3>Repolho</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/alface.jpg"  alt="imagem de alface">
+                    <img src="img/alface.jpg" alt="imagem de alface">
                     <h3>Alface</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/coentro.jpg"  alt="imagem de coentro">
+                    <img src="img/coentro.jpg" alt="imagem de coentro">
                     <h3>Coentro</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/couve.jpg"  alt="imagem de couve">
+                    <img src="img/couve.jpg" alt="imagem de couve">
                     <h3>Couve</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
                 </figure>
                 <figure>
-                    <img src="img/brocolis.jpg"  alt="imagem de brócolis">
+                    <img src="img/brocolis.jpg" alt="imagem de brócolis">
                     <h3>Brócolis</h3>
                     <p>R$20,00</p>
                     <img src="img/btn-adicionar.svg" alt="botão adicionar">
