alterções no Pop-Up

--- a/index.html
+++ b/index.html
@@ -57,17 +57,18 @@
                 </ul>
             </nav>
         </section>
-        <div class="wrapper">
-            <div class="search">
-                <button type="submit">
-                    <img src="img/Lupa.svg" alt="icone procurar" />
-                </button>
-                <input type="text" class="procurar" placeholder="O que você vai querer hoje?" />
+        <div class="all-wrapper">
+            <div class="wrapper">
+                <div class="search">
+                    <button type="submit">
+                        <img src="img/Lupa.svg" alt="icone procurar" />
+                    </button>
+                    <input type="text" class="procurar" placeholder="O que você vai querer hoje?" />
+                </div>
+                <a href="#"><img src="img/btn-categorias.svg" class="filter" /></a>
             </div>
-            <a href="#"><img src="img/btn-categorias.svg" class="filter" /></a>
             
             <script src="script.js"></script>
-
             <div id="modal-promocao" class="modal-container">
                 <div class="modal">
                     <div class="center">
