Versão entregue na plataforma

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </button>
                     <input type="text" class="procurar" placeholder="O que você vai querer hoje?" />
                 </div>
-                <a href="#"><img src="img/btn-categorias.svg" class="filter" /></a>
+                <img src="img/btn-categorias.svg" class="filter" />
             </div>
             
             <script src="script.js"></script>
